--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% include "header.html" %}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-<header class="masthead position-relative" style="background-image: url('https://perfectdailygrind.com/wp-content/uploads/2019/11/rowney-5.jpg'); background-size: cover">
+<header class="masthead position-relative" style="background-image: url('https://images.pexels.com/photos/2233399/pexels-photo-2233399.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); background-size: cover">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
